Move retail project under src folder

--- a/src/retail/retail.csproj
+++ b/src/retail/retail.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -24,8 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\core.console\core.console.csproj" />
-    <ProjectReference Include="..\src\core\core.csproj" />
+    <ProjectReference Include="..\core.console\core.console.csproj" />
+    <ProjectReference Include="..\core\core.csproj" />
   </ItemGroup>
 
 </Project>
